# PunchClock

./: .gitignore  Dockerfile  README.md  create-workflow-diagram.py  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  manage.py  mkdocs.yml  package.json  pyproject.toml  serve-docs.ps1  serve-docs.sh  tailwind.config.js
.github/workflows/: django.yml
ClockingInAndOut/: asgi.py  settings.py  urls.py  wsgi.py
PunchClock/: apps.py  models.py  set_user_stats.py  urls.py  views.py
PunchClock/migrations/: 0001_initial.py  0002_alter_calendarsettings_user_personalnote.py  0003_companysettings.py  0004_employee.py  0005_employee_hire_date.py  0006_alter_employee_department_alter_employee_hire_date.py  0007_alter_employee_department_alter_employee_hire_date_and_more.py  0008_companysettings_rest_hours_and_more.py  0009_companysettings_rest_hours_and_more.py  0010_department_alter_employee_department.py  0011_convert_department_strings_to_models.py  0012_finalize_department_conversion.py  0013_alter_employee_department_export.py  0014_companysettings_company_logo.py  0015_timeentry_segment_index_timeentry_session_id_and_more.py  0016_timeentry_entry_type.py
PunchClock/templates/: base.html
PunchClock/views/: __init__.py  auth_views.py  base_views.py  calendar_views.py  company_views.py  department_views.py  employee_views.py  export_views.py  profile_views.py  time_entries.py  time_views.py
docs/: CHANGELOG.md  admin.md  architecture.md  contributing.md  deployment.md  git-workflow.md  index.md  setup.md  tests.md  usage.md
docs/api/: index.md
(+44 files in other folders)
