[tool.poetry]
name = "punch-clock"
version = "0.1.0"
description = "A punch clock application for managing employee time tracking and holidays."
authors = ["Kamyar Bashar <kamyar.bashar@gmail.com>"]
readme = "README.md"
packages = [{include = "PunchClock"}, {include = "ClockingInAndOut"}]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
psycopg2-binary = "*"
pillow = "^11.2.1"
pandas = "^2.2.3"
xlsxwriter = "^3.2.3"
matplotlib = "^3.10.3"
reportlab = "^4.4.0"
pdfkit = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
